--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     // This dependency is found on compile classpath of this component and consumers.
     compile 'com.google.guava:guava:23.0'
 
+    // https://mvnrepository.com/artifact/org.javassist/javassist
+    compile group: 'org.javassist', name: 'javassist', version: '3.15.0-GA'
+
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
 }
