--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ run {
     // standardOutput = new FileOutputStream('app.out')
 
     // If Arguments are static
-    args = ["MainCom"]
+    args = ["Test1"]
 
     // Pass args when running in console: gradle run -PappArgs="['arg1','arg2']"
     if (project.hasProperty("appArgs")) {
