--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,8 @@ plugins {
 mainClassName = 'ist.meic.pa.GenericFunctionsExtended.WithGenericFunctions'
 
 dependencies {
-    // This dependency is found on compile classpath of this component and consumers.
-    compile 'com.google.guava:guava:23.0'
-
     // https://mvnrepository.com/artifact/org.javassist/javassist
     compile group: 'org.javassist', name: 'javassist', version: '3.21.0-GA'
-
-    // Use JUnit test framework
-    testCompile 'junit:junit:4.12'
 }
 
 // In this section you declare where to find the dependencies of your project
@@ -47,7 +41,7 @@ run {
     // standardOutput = new FileOutputStream('app.out')
 
     // If Arguments are static
-    args = ["Tests.TestCombinationMAXMain"]
+    // args = ["Tests.TestCombinationMAXMain"]
 
     // Pass args when running in console: gradle run -PappArgs="['arg1','arg2']"
     if (project.hasProperty("appArgs")) {
